# aas-lancedb-mcp

./: .codecov.yml  .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml
data/vectors/_init.lance/_transactions/: 1-5eaa29c5-2a59-48d1-b5b5-e889ae94869f.txn  3-9cdffa49-59b3-4b10-b95c-d602b61f5cd3.txn
data/vectors/_init.lance/_versions/: 1.manifest  2.manifest  3.manifest  4.manifest
data/vectors/_init.lance/data/: 0bab45fe-c66d-46a2-a4de-3cddff00acc0.lance
src/lancedb_mcp/: __init__.py  __main__.py  embedding.py  models.py  server.py
tests/: conftest.py  test_init.py  test_models.py  test_resources_prompts.py  test_server.py
