[project]
name = "aas-lancedb-mcp"
version = "0.1.0"
description = "Enhanced LanceDB MCP Server for arbitrary datastore management with sentence transformers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lancedb>=0.12.0",
    "pydantic>=2.0",
    "mcp>=1.1.2",
    "numpy>=1.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "tomlkit>=0.12.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "typing-extensions>=4.0.0"
]
authors = [
    { name = "AAS Team", email = "team@aas.dev" }
]
maintainers = [
    { name = "RyanLisse", email = "ryan.lisse@gmail.com" }
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
]

[project.scripts]
aas-lancedb-mcp = "lancedb_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "B",   # flake8-bugbear
]
ignore = [
    "D203",  # one-blank-line-before-class
    "D213",  # multi-line-summary-second-line
]

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]  # Ignore docstring rules in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing"
